# ProgrammingLab

./: Es10.py  Es9.py  Esercizio6.py  altro6.py  class_csv.py  csv.py  model.py  parse_csv.py  plot.py  prova.py  pyproject.toml  shampoo_sales.csv
